mainfest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: end-to-end-ingress
  namespace: flask-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: end-to-end-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: end-to-end-service
            port:
              number: 8000
